Fix negative map margins on mobile

--- a/static/less/admin/aktiviteter/position.less
+++ b/static/less/admin/aktiviteter/position.less
@@ -1,9 +1,21 @@
 div.map-container {
   margin-bottom: 30px;
 
+  @media (min-width: 769px) {
+    div.map-shadow {
+      margin: 0px -25px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    div.map-shadow {
+      margin: 0px -15px;
+    }
+  }
+
+
   div.map-shadow {
     padding: 3px 0px;
-    margin: 0px -25px;
 
     -moz-box-shadow: inset 0 0 5px #888;
     -webkit-box-shadow: inset 0 0 5px#888;
